<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/radio1"
        android:onClick="openStation"
        android:hint="@string/url_radio1" />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/radio2"
        android:onClick="openStation"
        android:hint="@string/url_radio2" />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/radio3"
        android:onClick="openStation"
        android:hint="@string/url_radio3" />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/radio4"
        android:onClick="openStation"
        android:hint="@string/url_radio4" />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/radio5"
        android:onClick="openStation"
        android:hint="@string/url_radio5" />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/putonghua"
        android:onClick="openStation"
        android:hint="@string/url_putonghua" />
</LinearLayout>
